--- a/styles.css
+++ b/styles.css
@@ -300,11 +300,11 @@ button {
   cursor: pointer;
 }
 
-.task label .label-text {
+label .nav-item[name="nav"][type="radio"][id="opt-2"][checked] {
   position: relative;
 }
 
-.task label .label-text:before {
+label .nav-item[name="nav"][type="radio"][id="opt-2"][checked]:before {
   content: '';
   position: absolute;
   width: 14px;
@@ -315,7 +315,7 @@ button {
   transition: 0.2s ease;
 }
 
-.task-item:checked + label .label-text:before {
+.task-item:checked + label .nav-item[name="nav"][type="radio"][id="opt-2"][checked]:before {
   background-color: var(--checkbox-color);
   border: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
@@ -324,6 +324,7 @@ button {
   background-position: center;
   border: 1px solid var(--checkbox-color);
 }
+
 
 .tag {
   font-size: 10px;
