--- a/styles.scss
+++ b/styles.scss
@@ -360,28 +360,33 @@ button {
     }
   }
   
-   label .label-text { position: relative; }
+  label {
+    .nav-item {
+      position: relative;
   
-   label .label-text:before {
-    content:'';
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    left: -24px;
-    transition: .2s ease;
+      &:before {
+        content: '';
+        position: absolute;
+        width: 14px;
+        height: 14px;
+        border: 1px solid #ddd;
+        border-radius: 2px;
+        left: -24px;
+        transition: .2s ease;
+      }
+    }
+  
+    .task-item:checked + .nav-item:before {
+      background-color: var(--checkbox-color);
+      border: none;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-size: 10px;
+      background-position: center;
+      border: 1px solid var(--checkbox-color);
+    }
   }
   
-  .task-item:checked + label .label-text:before {
-    background-color: var(--checkbox-color);
-    border: none;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-size: 10px;
-    background-position: center;
-    border: 1px solid var(--checkbox-color);
-  }
   
   .tag {
     font-size: 10px;
@@ -675,27 +680,31 @@ button {
   }
 }
 
- label .label-text { position: relative; }
+label {
+  .nav-item {
+    position: relative;
 
- label .label-text:before {
-  content:'';
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  border: 1px solid #ddd;
-  border-radius: 2px;
-  left: -24px;
-  transition: .2s ease;
-}
+    &:before {
+      content: '';
+      position: absolute;
+      width: 14px;
+      height: 14px;
+      border: 1px solid #ddd;
+      border-radius: 2px;
+      left: -24px;
+      transition: .2s ease;
+    }
+  }
 
-.task-item:checked + label .label-text:before {
-  background-color: var(--checkbox-color);
-  border: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: 10px;
-  background-position: center;
-  border: 1px solid var(--checkbox-color);
+  .task-item:checked + .nav-item:before {
+    background-color: var(--checkbox-color);
+    border: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: 10px;
+    background-position: center;
+    border: 1px solid var(--checkbox-color);
+  }
 }
 
 .tag {
